fix scroll overflow

--- a/src/Components/Dnd/block.css
+++ b/src/Components/Dnd/block.css
@@ -3,7 +3,7 @@
   }
 
 body{
-    overflow: hidden;
+    overflow: scroll;
 }
 
 :root {
@@ -66,7 +66,7 @@ border-color: hsl(var(--userColor), 100%, 14%);
 .day{
     flex-grow: 1;
     border: 1px solid black; 
-    overflow-y: auto; 
+    overflow-y: scroll; 
     max-height: 800px; 
     width: 0; 
     min-width: 0; 
